Header menu made

--- a/web/templates/main_template.xhtml
+++ b/web/templates/main_template.xhtml
@@ -17,6 +17,7 @@
         </f:facet>
         <script src="http://code.jquery.com/jquery.js"></script>
         <h:outputStylesheet name="bootstrap/css/bootstrap.css" />
+        <h:outputStylesheet name="css/menu.css" />
         <h:outputScript name="bootstrap/js/bootstrap.js" />
 
     </h:head>
