--- a/web/templates/header-t.xhtml
+++ b/web/templates/header-t.xhtml
@@ -1,13 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/templates/main_template.xhtml"
+               
                 xmlns:f="http://xmlns.jcp.org/jsf/core">  
-    <ui:define name="title">menu</ui:define>
+    
+    <!--<ui:define name="title">menu</ui:define>-->
 
 
 
-    <ui:define name="content">
+    <!--<ui:define name="content">-->
         <div class="col-md-12 col-lg-12 col-xs-12 menu-holder">
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
@@ -41,7 +42,7 @@
                                             </a>
                                             <a href="#" class="submenu-link">
                                                 <div class="col-md-2 submenu-container" style="background-color: #d43f3a;">
-                                                    <h:graphicImage library="images" name="menu_thumbnails/figure-prof-wh.png" styleClass="center-block submenu-image"/>
+                                                    <h:graphicImage library="images" name="menu_thumbnails/figure-prof-wh2.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Unos profesora</p>
                                                 </div>
                                             </a>
@@ -90,9 +91,10 @@
 
                                         </div>
                                     </li>
-                                </ul>
+                                </ul>  <!-- End of submenu -->
                             </li>
                         </ul>
+                        <!-- user data dropdown -->
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ime Prezime</a>
@@ -103,6 +105,7 @@
                                 </ul>
                             </li>
                         </ul>
+                        <!-- messages and notification dropdown -->
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -119,23 +122,23 @@
                 </div><!-- /.container-fluid -->
             </nav>
         </div>
-        sdffffffffffffffffffffffffffffffff
+
         <!-- Content example to check transparency -->
-        <div class="col-md-12">
-            <div class="col-md-9 col-md-offset-2">
-                <h1>Unos novog ovog onog</h1>
-                <p>Gentrify fingerstache kale chips, Helvetica banh mi four loko food truck single-origin coffee meggings. Pug XOXO blog aesthetic. Semiotics Etsy cray, sriracha pork belly umami Godard tattooed blog farm-to-table ethnic Tonx messenger bag Tumblr. Thundercats street art Echo Park, fanny pack meggings occupy irony XOXO seitan next level. Next level literally gastropub, Blue Bottle hoodie Intelligentsia umami wayfarers. Keffiyeh viral distillery pop-up, aesthetic sustainable before they sold out. Helvetica PBRB messenger bag art party pop-up Odd Future.</p>
+        <!--        <div class="col-md-12">
+                    <div class="col-md-9 col-md-offset-2">
+                        <h1>Unos novog ovog onog</h1>
+                        <p>Gentrify fingerstache kale chips, Helvetica banh mi four loko food truck single-origin coffee meggings. Pug XOXO blog aesthetic. Semiotics Etsy cray, sriracha pork belly umami Godard tattooed blog farm-to-table ethnic Tonx messenger bag Tumblr. Thundercats street art Echo Park, fanny pack meggings occupy irony XOXO seitan next level. Next level literally gastropub, Blue Bottle hoodie Intelligentsia umami wayfarers. Keffiyeh viral distillery pop-up, aesthetic sustainable before they sold out. Helvetica PBRB messenger bag art party pop-up Odd Future.</p>
+        
+                        <p>Chillwave deep v bitters PBRB gastropub meh, Truffaut Echo Park raw denim Marfa Neutra hella art party. Retro fixie Pinterest keytar XOXO. VHS Odd Future fixie, Kickstarter selfies Etsy kitsch Banksy cred Pitchfork pickled lo-fi Intelligentsia sriracha stumptown. Pop-up photo booth ethnic blog selvage, wayfarers seitan slow-carb. Fashion axe Wes Anderson scenester artisan brunch. Hashtag pork belly disrupt, banh mi Cosby sweater farm-to-table selvage. Asymmetrical mumblecore tattooed, tote bag organic vinyl Etsy salvia DIY.</p>
+        
+                        <p>Umami keytar Odd Future, Wes Anderson chambray artisan banh mi iPhone. Fixie slow-carb Banksy, High Life blog cornhole Kickstarter photo booth seitan whatever wayfarers tote bag Williamsburg Portland. Irony trust fund Cosby sweater, mlkshk sustainable post-ironic tousled lo-fi ethical. Tote bag 90's paleo, pickled synth vinyl seitan Austin mlkshk banjo single-origin coffee bitters. Keytar flannel narwhal, leggings cardigan ugh umami Etsy single-origin coffee Cosby sweater letterpress Echo Park 8-bit kogi. Tofu kogi Cosby sweater irony bitters. Crucifix vinyl try-hard, pug bicycle rights fap keffiyeh forage asymmetrical hoodie leggings post-ironic next level lomo.</p>
+        
+                        <p>Seitan flexitarian keytar sustainable 8-bit fingerstache pug irony. Raw denim kale chips Odd Future photo booth seitan, gentrify Pinterest vegan direct trade quinoa pug. Trust fund tousled direct trade, pop-up literally Cosby sweater stumptown fanny pack deep v scenester jean shorts. Actually typewriter street art, Shoreditch twee plaid scenester ugh keytar DIY Godard. Brunch photo booth PBR, pour-over fingerstache yr Carles Tumblr ugh Bushwick Wes Anderson flexitarian. Ugh put a bird on it keytar, hella street art blog Wes Anderson chillwave semiotics irony brunch retro meh squid single-origin coffee. Four loko mumblecore mustache narwhal.</p>
+        
+        
+                    </div>
+                </div>-->
 
-                <p>Chillwave deep v bitters PBRB gastropub meh, Truffaut Echo Park raw denim Marfa Neutra hella art party. Retro fixie Pinterest keytar XOXO. VHS Odd Future fixie, Kickstarter selfies Etsy kitsch Banksy cred Pitchfork pickled lo-fi Intelligentsia sriracha stumptown. Pop-up photo booth ethnic blog selvage, wayfarers seitan slow-carb. Fashion axe Wes Anderson scenester artisan brunch. Hashtag pork belly disrupt, banh mi Cosby sweater farm-to-table selvage. Asymmetrical mumblecore tattooed, tote bag organic vinyl Etsy salvia DIY.</p>
-
-                <p>Umami keytar Odd Future, Wes Anderson chambray artisan banh mi iPhone. Fixie slow-carb Banksy, High Life blog cornhole Kickstarter photo booth seitan whatever wayfarers tote bag Williamsburg Portland. Irony trust fund Cosby sweater, mlkshk sustainable post-ironic tousled lo-fi ethical. Tote bag 90's paleo, pickled synth vinyl seitan Austin mlkshk banjo single-origin coffee bitters. Keytar flannel narwhal, leggings cardigan ugh umami Etsy single-origin coffee Cosby sweater letterpress Echo Park 8-bit kogi. Tofu kogi Cosby sweater irony bitters. Crucifix vinyl try-hard, pug bicycle rights fap keffiyeh forage asymmetrical hoodie leggings post-ironic next level lomo.</p>
-
-                <p>Seitan flexitarian keytar sustainable 8-bit fingerstache pug irony. Raw denim kale chips Odd Future photo booth seitan, gentrify Pinterest vegan direct trade quinoa pug. Trust fund tousled direct trade, pop-up literally Cosby sweater stumptown fanny pack deep v scenester jean shorts. Actually typewriter street art, Shoreditch twee plaid scenester ugh keytar DIY Godard. Brunch photo booth PBR, pour-over fingerstache yr Carles Tumblr ugh Bushwick Wes Anderson flexitarian. Ugh put a bird on it keytar, hella street art blog Wes Anderson chillwave semiotics irony brunch retro meh squid single-origin coffee. Four loko mumblecore mustache narwhal.</p>
-
-
-            </div>
-        </div>
-
-    </ui:define>
+    <!--</ui:define>-->
 
 </ui:composition>
