Added more views

--- a/web/resources/css/menu.css
+++ b/web/resources/css/menu.css
@@ -107,7 +107,7 @@ and open the template in the editor.
 }
 
 .badge:hover{
-    background-color: #b92c28;
+    /*background-color: #b92c28;*/
 }
 
 /* end of hover properties*/
