--- a/web/templates/header-t.xhtml
+++ b/web/templates/header-t.xhtml
@@ -20,7 +20,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">FON diplomski</a>
+                        <a class="navbar-brand" href="index.jsf">FON diplomski</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,25 +34,25 @@
                                 <ul class="dropdown-menu" id="submenu">
                                     <li>
                                         <div class="col-md-12 row" id="submenu-main-container">
-                                            <a href="#" class="submenu-link">
+                                            <a href="add-student.jsf" class="submenu-link">
                                                 <div class="col-md-2 submenu-container">
                                                     <h:graphicImage library="images" name="menu_thumbnails/figure-student-wh.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Unos studenta</p>
                                                 </div>
                                             </a>
-                                            <a href="#" class="submenu-link">
+                                            <a href="add-employee.jsf" class="submenu-link">
                                                 <div class="col-md-2 submenu-container" style="background-color: #d43f3a;">
                                                     <h:graphicImage library="images" name="menu_thumbnails/figure-prof-wh2.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Unos profesora</p>
                                                 </div>
                                             </a>
-                                            <a href="#" class="submenu-link">
+                                            <a href="student-info.jsf" class="submenu-link">
                                                 <div class="col-md-2 submenu-container" style="background-color: #419641;">
                                                     <h:graphicImage library="images" name="menu_thumbnails/user-data-wh.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Podaci o korisniku</p>
                                                 </div>
                                             </a>
-                                            <a href="#" class="submenu-link">
+                                            <a href="thesis-request.jsf" class="submenu-link">
                                                 <div class="col-md-2 submenu-container" style="background-color: #ec971f;">
                                                     <h:graphicImage library="images" name="menu_thumbnails/thesis-req-wh.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Zahtev za temu</p>
@@ -70,13 +70,13 @@
                                                     <p class="text-center submenu-text">Komunikacija</p>
                                                 </div>
                                             </a>
-                                            <a href="#" class="submenu-link">
+                                            <a href="thesis-approve.jsf" class="submenu-link">
                                                 <div class="col-md-2 submenu-container" style="background-color: #d43f3a;">
                                                     <h:graphicImage library="images" name="menu_thumbnails/approve-thesis-wh.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Odobravanje tema</p>
                                                 </div>
                                             </a>
-                                            <a href="#" class="submenu-link">
+                                            <a href="send-final-version.jsf" class="submenu-link">
                                                 <div class="col-md-2 submenu-container" style="background-color: #419641;">
                                                     <h:graphicImage library="images" name="menu_thumbnails/final-send-wh.png" styleClass="center-block submenu-image"/>
                                                     <p class="text-center submenu-text">Slanje završne verzije</p>
