--- a/web/templates/main_template.xhtml
+++ b/web/templates/main_template.xhtml
@@ -26,7 +26,7 @@
              <ui:include src="/templates/header-t.xhtml" />
              <div class="col-md-11">
                  <div class="col-md-4 text-left form-heading">
-                     <ui:insert name="heading">Naslov</ui:insert>
+                     <ui:insert name="heading"></ui:insert>
                  </div>
                  <div class="col-md-7" style="margin-top: 30px;">
                  <ui:insert name="content">Content</ui:insert>
