--- a/web/templates/search-template.xhtml
+++ b/web/templates/search-template.xhtml
@@ -24,13 +24,11 @@
     </h:head>
     <h:body>
              <ui:include src="/templates/header-t.xhtml" />
-             <div class="col-md-11">
-                 <div class="col-md-4 text-left form-heading">
-                     <ui:insert name="heading"></ui:insert>
-                 </div>
-                 <div class="col-md-8" style="margin-top: 30px;">
+             
+             <div class="col-md-10 col-md-offset-1">
+                 
                  <ui:insert name="content">Content</ui:insert>
-                 </div>  
+               
              </div>
                  
         
