--- a/web/resources/css/forms.css
+++ b/web/resources/css/forms.css
@@ -11,3 +11,6 @@ and open the template in the editor.
 .form-heading{
     /*font-size: 150px !important;*/
 }
+.student-communication:hover{
+    background-color: #ddd;
+}
