--- a/web/templates/menus/superadministrator-menu_1.xhtml
+++ b/web/templates/menus/superadministrator-menu_1.xhtml
@@ -36,12 +36,12 @@
                                     <div class="col-md-12 row" id="submenu-main-container">
                                         <ui:include src="/templates/menu-items/add-student-mi.xhtml" />
                                        <ui:include src="/templates/menu-items/add-professor-mi.xhtml" />
-                                    <ui:include src="/templates/menu-items/student-info-mi.xhtml" />
-                                      <ui:include src="/templates/menu-items/thesis-request-mi.xhtml" />
+                                    <!--<ui:include src="/templates/menu-items/student-info-mi.xhtml" />-->
+                                      <!--<ui:include src="/templates/menu-items/thesis-request-mi.xhtml" />-->
                                       <ui:include src="/templates/menu-items/search-mi.xhtml" />
-                                       <ui:include src="/templates/menu-items/communications-list-mi.xhtml" />
-                                     <ui:include src="/templates/menu-items/thesis-aprove-mi.xhtml" />
-                                    <ui:include src="/templates/menu-items/send-final-version-mi.xhtml" />
+                                       <!--<ui:include src="/templates/menu-items/communications-list-mi.xhtml" />-->
+                                     <!--<ui:include src="/templates/menu-items/thesis-aprove-mi.xhtml" />-->
+                                    <!--<ui:include src="/templates/menu-items/send-final-version-mi.xhtml" />-->
                                      <ui:include src="/templates/menu-items/all-theses-mi.xhtml" />
                                      <ui:include src="/templates/menu-items/search-professor-mi.xhtml" />   
                                      <ui:include src="/templates/menu-items/search-student-mi.xhtml" />                                    
