--- a/web/templates/search-template.xhtml
+++ b/web/templates/search-template.xhtml
@@ -23,7 +23,7 @@
 
     </h:head>
     <h:body>
-             <ui:include src="/templates/header-t.xhtml" />
+               <ui:include src="/templates/menus/#{loggedInUserBean.returnMenu()}.xhtml" />
              
              <div class="col-md-10 col-md-offset-1">
                  
