--- a/web/templates/menus/template-menu.xhtml
+++ b/web/templates/menus/template-menu.xhtml
@@ -52,7 +52,7 @@
                                 <li class="divider"></li>
                                 <li>
                                     <h:form>
-                                    <h:commandLink action="#{loggedInUserBean.logout}" target="_blank" value="Odjavi se"/>
+                                        <h:commandLink action="#{loggedInUserBean.logout}" styleClass="btn btn-warning" target="_blank" value="Odjavi se"/>
                                     </h:form>
                                     <!--<a href="#">Odjavi se</a>-->
                                 </li>
