--- a/web/templates/main_template.xhtml
+++ b/web/templates/main_template.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <!--  When you make your own projects, copy and rename sample-file-with-form.xhtml
           or sample-file-no-form.xhtml. Don't copy and rename THIS file, because
           this file has too many extraneous things in it. -->
