--- a/web/templates/menu-items/search-professor-mi.xhtml
+++ b/web/templates/menu-items/search-professor-mi.xhtml
@@ -2,7 +2,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"> 
-    <a href="#" class="submenu-link">
+    <a href="student-search.jsf" class="submenu-link">
         <div class="col-md-2 submenu-container" style="background-color: #7143E6;">
             <h:graphicImage library="images" name="menu_thumbnails/search-professor-wh.png" styleClass="center-block submenu-image"/>
             <p class="text-center submenu-text">Pretraga profesora</p>
