--- a/web/templates/menu-items/search-student-mi.xhtml
+++ b/web/templates/menu-items/search-student-mi.xhtml
@@ -3,7 +3,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"> 
 
-    <a href="#" class="submenu-link">
+    <a href="employee-search.jsf" class="submenu-link">
         <div class="col-md-2 submenu-container" style="background-color: #d43f3a;">
             <h:graphicImage library="images" name="menu_thumbnails/search-student-wh.png" styleClass="center-block submenu-image"/>
             <p class="text-center submenu-text">Pretraga studenata</p>
