--- a/web/templates/search-form.xhtml
+++ b/web/templates/search-form.xhtml
@@ -36,6 +36,7 @@
         </h:form>
     </div>
     
+    <h3>Rezultati pretrage:</h3>
     <ui:repeat var="work" value="#{thesesSearch.resultTheses}" >
         <h1>#{work.subject}</h1>
     </ui:repeat>
