--- a/web/templates/menus/template-menu.xhtml
+++ b/web/templates/menus/template-menu.xhtml
@@ -34,7 +34,7 @@
                             <ul class="dropdown-menu" id="submenu">
                                 <li>
                                     <div class="col-md-12 row" id="submenu-main-container">
-                                          <ui:insert name="menu-config"></ui:insert>
+                                        <ui:insert name="menu-config"></ui:insert>
                                     </div>
                                 </li>
                             </ul>  <!-- End of submenu -->
@@ -44,8 +44,10 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                              #{loggedInUserBean.username}
-<!--                                Ime Prezime-->
+                                <!--#{loggedInUserBean.username}-->
+                                #{loggedInUserBean.loggedInPerson[loggedInUserBean.personIdentifier].name}
+                                 #{loggedInUserBean.loggedInPerson[loggedInUserBean.personIdentifier].surname}
+                                <!-- Ime Prezime-->
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="student-info.jsf">Podaci</a></li>
