Fixed profesor actions

--- a/web/templates/menus/professor-menu.xhtml
+++ b/web/templates/menus/professor-menu.xhtml
@@ -10,7 +10,7 @@
         <ui:include src="/templates/menu-items/search-mi.xhtml" />
         <ui:include src="/templates/menu-items/communications-list-mi.xhtml" />
         <ui:include src="/templates/menu-items/thesis-aprove-mi.xhtml" />
-
+        <ui:include src="/templates/menu-items/employee-info-mi.xhtml" />
         <ui:include src="/templates/menu-items/all-theses-mi.xhtml" />
         <ui:include src="/templates/menu-items/search-professor-mi.xhtml" />   
         <ui:include src="/templates/menu-items/search-student-mi.xhtml" />                                           
