--- a/web/resources/css/menu.css
+++ b/web/resources/css/menu.css
@@ -89,8 +89,28 @@ and open the template in the editor.
     color: #fff;
 }
 
-.badge {
+.badge-message {
     background-color: red;
+    margin-right: 5px;
+
+}
+
+.badge-request {
+    background-color: green;
+    margin-right: 5px;
+
+}
+
+.notif-message {
+    color: red;
+    margin-right: 5px;
+
+}
+
+.notif-request {
+    color: green;
+    margin-right: 5px;
+
 }
 
 
@@ -140,5 +160,6 @@ and open the template in the editor.
     -moz-border-radius: 0 !important;
     border-radius: 0 !important;
     width: 100%;
+    height: 100%;
     text-align: left;
 }
