--- a/web/templates/menus/template-menu.xhtml
+++ b/web/templates/menus/template-menu.xhtml
@@ -67,8 +67,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-comment" style="margin-right: 5px;"></span>
-                                <span class="badge-request badge pull-right">3</span>
-                                <span class="badge-message badge pull-right">5</span>
+                                <span class="badge-request badge pull-right">#{notificationsBean.newThesisRequests}</span>
+                                <span class="badge-message badge pull-right">#{notificationsBean.unreadCommunications}</span>
                                 
                             </a>
                             <ul class="dropdown-menu" role="menu">
@@ -76,14 +76,14 @@
                                     <a href="#">
                                         <span class="notif-message glyphicon glyphicon-circle-arrow-right"></span>
                                         Poruke:
-                                        <span class="pull-right">5</span>
+                                        <span class="pull-right">#{notificationsBean.unreadCommunications}</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <span class="notif-request glyphicon glyphicon-circle-arrow-right"></span>
                                         Zahtevi:
-                                        <span class="pull-right">3</span>
+                                        <span class="pull-right">#{notificationsBean.newThesisRequests}</span>
                                     </a>
                                 </li>
                             </ul>
