--- a/web/resources/css/forms.css
+++ b/web/resources/css/forms.css
@@ -31,3 +31,24 @@ and open the template in the editor.
     display: inline;
     /*width:100%;*/
 }
+
+.received_message{
+    background-color: #285e8e;
+    color: white;
+}
+
+.sent_message{
+    background-color: #eee;
+}
+
+.received_message,.sent_message{
+    /*margin: 10px;*/
+    padding: 15px;
+}
+.message_container{
+    margin: 10px;
+}
+
+.message_person_name{
+    font-size: 10px;
+}
