--- a/web/templates/main_template.xhtml
+++ b/web/templates/main_template.xhtml
@@ -24,8 +24,8 @@
 
     </h:head>
     <h:body>
-        <ui:include src="/templates/menus/#{loggedInUserBean.returnMenu()}.xhtml" />
-             <div class="col-md-11">
+<!--        <ui:include src="/templates/menus/#{loggedInUserBean.returnMenu()}.xhtml" />
+-->             <div class="col-md-11">
                  <div class="col-md-4 text-left form-heading">
                      <ui:insert name="heading"></ui:insert>
                  </div>
