--- a/web/templates/main_template.xhtml
+++ b/web/templates/main_template.xhtml
@@ -24,7 +24,7 @@
 
     </h:head>
     <h:body>
-        <ui:include src="/templates/menus/#{loggedInUserBean.returnMenu()}.xhtml" />
+        <ui:include rendered="#{loggedInUserBean.loggedInPerson.size() > 0}" src="/templates/menus/#{loggedInUserBean.returnMenu()}.xhtml" />
         <div class="col-md-11">
             <div class="col-md-4 text-left form-heading">
                 <ui:insert name="heading"></ui:insert>
